force-app/main/default/objects/vlocity_cmt__TriggerListener__mdt/vlocity_cmt__TriggerListener__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Listener</label>
    <pluralLabel>Trigger Listeners</pluralLabel>
</CustomObject>