force-app/main/default/objects/vlocity_cmt__TriggerListener__mdt/fields/vlocity_cmt__ListenerClassName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ListenerClassName__c</fullName>
    <description>Class name of the trigger listener</description>
    <label>Trigger class name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>