force-app/main/default/objects/vlocity_cmt__TriggerListener__mdt/fields/vlocity_cmt__Priority__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Priority__c</fullName>
    <description>Priority of the trigger.</description>
    <label>Priority of the trigger</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>